@@ -10,6 +10,8 @@
 
 
 Version 4.1.6
+ - Fixed: [ 1977981 ] login.php leads to empty Indy - and Wrong Admin ID (canajun2eh)
+ - Fixed: Bogus message about missing cookie support on Login page (canajun2eh)
  - Added: New drag and drop Media Sort Function for Lightbox and Media Tabs (windmillway)
  - Fixed: [ 1970563 ] SVN 3115 _CHR_CHIL appears as gedcom error (fisharebest)
  - Changed: Lightbox: - Fixed Firefox dragNdrop erroneous initial displacement when in zoom mode (windmillway)
